# rust-custom-tcp-protocol-service

./: Cargo.toml  LICENSE  README.md
collector/: Cargo.toml  uuid
collector/src/: data_collector.rs  main.rs  sender.rs
server/: .env  Cargo.toml  collection.db
server/migrations/: 20250419190822_initial.sql
server/src/: api.rs  collector.html  collector.rs  commands.rs  index.html  main.rs
shared_code/: Cargo.toml
shared_code/src/: lib.rs  main.rs
