[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
shared_code = { path = "../shared_code" }
sqlx = { version= "0.8.5", default-features = false,  features = [
    "all-databases",            # postgres, mysql, sqlite
    "runtime-tokio-native-tls", # or your runtime/TLS of choice
    "macros",                   # compile‑time checked queries
    "migrate",                  # migrations API, if you need it
] }
tokio = { version = "1.44.2", features = ["full"] }
uuid = "1.16.0"
axum = "0.8.3"
api = "0.2.0"
web = "0.2.12"
once_cell = "1.21.3"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
